# cloud-admin-openenv

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  output.txt  pyproject.toml  requirements.txt
scratch/: codebase_extraction.md  codebase_extraction_utf8.md  debug_reward.py  extract_codebase.py  verify_clamp.py
server/: app.py  environment.py
